[package]
name = "steam-kit"
version = "0.1.0"
authors = ["JAD3N <me@jaden.bio>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jad3n/steam-kit"
documentation = "https://docs.rs/steam-kit/0.1.0"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
num_enum = "0.5"
thiserror = "1.0"
regex = "1.5"
lazy_static = "1.4"