[package]
name = "steamkit-client"
version = "0.1.0"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-client/0.1.0"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
# steamkit
steamkit-vdf = { path = "../steamkit-vdf", version = "0.1.0" }
steamkit-protos = { path = "../steamkit-protos", version = "0.1.0" }

# other
