[package]
name = "steamkit-client"
version = "0.2.0"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-client/0.2.0"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
# steamkit
steamkit-kv = { path = "../steamkit-kv", version = "0.2.3" }
steamkit-protos = { path = "../steamkit-protos", version = "0.2.0" }
steamkit-util = { path = "../steamkit-util", version = "0.2.0" }

# other
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["gzip"] }
tokio = { version = "1.33", optional = true, features = ["rt", "net"] }
async-std = { version = "1.12", optional = true }
bytes = "1.5"
deku = "0.16"

[dev-dependencies]
tokio = { version = "1.33", features = ["full"] }

[features]
default = ["tokio"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]
