[package]
name = "steamkit-kv"
version = "0.2.1"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-kv/0.2.1"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
nom = "7.1"
thiserror = "1.0"
indexmap = "2.0"
