[package]
name = "steamkit-lang"
version = "0.2.0"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-lang/0.2.0"
description = """
This crate is used to generate Rust code from the `SteamLanguage` files provided by `SteamKit`.
"""
build = "build/main.rs"

[dependencies]
bitflags = "2.3"
num-traits = "0.2"
num-derive = "0.4"

[build-dependencies]
nom = "7.1"
glob = "0.3"
heck = "0.4"
