[package]
name = "steamkit-lang"
version = "0.2.0"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-lang/0.2.0"
description = """
This crate is used to generate Rust code from the `SteamLanguage` files provided by `SteamKit`.
"""
build = "build/main.rs"

[dependencies]
derive-new = "0.6"

[build-dependencies]
nom = "7.1"
heck = "0.4"
regex = "1.10"
once_cell = "1.18"
anyhow = "1.0"
