[package]
name = "steamkit-protos"
version = "0.2.0"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-protos/0.2.0"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
protobuf = "3.2"

[build-dependencies]
protobuf-codegen = "3.2"
# protoc-bin-vendored = "2.27"
protoc-bin-vendored = "3.0.0"
glob = "0.3"