[package]
name = "steamkit-util"
version = "0.2.0"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-util/0.2.0"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
thiserror = "1.0"
num_enum = "0.6"
regex = "1.8"
lazy_static = "1.0"
rust-crypto = "0.2"
rsa = "0.9"
rand = "0.8"
sha1 = { version = "0.10", features = ["oid"] }
crc = "3.0"
adler = "1.0"
hex = "0.4"