[package]
name = "steamkit-vdf"
version = "0.2.0"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-vdf/0.2.0"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
thiserror = "1.0"
indexmap = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
