[package]
name = "steamkit-vdf"
version = "0.2.3"
edition = "2024"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-kv/0.2.3"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies]
thiserror = "2.0"
cfg-if = "1.0"
memchr = "2.7"

[features]
default = []
precision = []
