[package]
name = "steamkit-vpk"
version = "0.1.1"
edition = "2021"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit-vpk/0.1.1"
description = """
This crate is a simple library to help parse and read files based on the [VPK file format](https://developer.valvesoftware.com/wiki/VPK_(file_format)).
"""

[dependencies]
nom = "7.1"
nom-derive = "0.10"
thiserror = "1.0"

