[package]
name = "steamkit"
version = "0.2.0"
edition = "2024"
authors = ["JAD3N <me@jaden.bio>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jad3n/steamkit"
documentation = "https://docs.rs/steamkit/0.2.0"
description = """
This crate is designed to be a bunch of tools for interacting with the Steam API.
"""

[dependencies.steamkit-kv]
path = "../steamkit-kv"
version = "0.2.0"
optional = true

# steamkit
[features]
default = []
kv = ["dep:steamkit-kv"]
full = ["kv"]
